<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RosetoPersolino</string>
    <string name="benvenuti">Benvenuti</string>
    <string name="start">INIZIA LA TUA VISITA</string>
    <string name="visitor">Visitatore</string>
    <string name="technical">Tecnico</string>
    <string name="map">Cartina del roseto</string>
    <string name="elenco_rose">ELENCO ROSE</string>
    <string name="exit_button">Se hai finito la tua visita clicca qui</string>
    <string name="uscita">GRAZIE PER LA</string>
    <string name="uscita2">TUA VISITA</string>
    <string name="rosa1">ROSA CENTIFOLIA</string>
    <string name="descrizione1"> La rosa Centifolia è detta rosa dei pittori perchè spesso raffigurata nelle tele degli artisti fiamminghi. Sviluppata in Olanda, i suoi petali sono di un colore rosa brillante, con foglie ispide e verdi e moltissime spine sottili. </string>
    <string name="rosa2">ROSA TEA</string>
    <string name="descrizione2">La rosa tea è chiamata così perchè caratterizzata da un profumo intenso che ricorda il thè fresco. Originaria della Cina viaggiò su navi adibite al trasporto di thè fino all Europa. Caratterizzata da petali color giallo vivace, può raggiungere un altezza di 2 metri. Produce dei frutti che prendono il nome di acheni leggermente coperti da peluria. Riesce a resistere sia ad alte che basse temperature ma necessita di molta luce per vivere. </string>
    <string name="tutte_rose">CERCA LE ROSE</string>
    <string name="rosa3">ROSA MISTER LINCOLN</string>
    <string name="descrizione3">La rosa Mister Lincoln fiorisce nei mesi nei mesi estivi e autunnali con fioritura unica. Presenta una tonalità rosso scarlatto e al tatto risulta vellutata. Si tratta di un fiore doppio che presenta dai 15 ai 30 petali ed ha un profumo intenso. Riesce a sopravvivere tra i -10°C e i 37°C ed è quindi adatta ad habitat come il Nord Italia e gli appennini. </string>
    <string name="rosa4">ROSA GALLICA VERSICOLOR</string>
    <string name="descrizione4">Questa rosa, assai antica, è una mutazione della R. gallica officinalis. Probabilmente è la più antica tra le rose variegate. I fiori sono rosso chiaro e bianco, striati in modo diverso. Questa pianta non si sviluppa particolarmente, ha un portamento appena eretto e compatto che si modifica, arcuandosi, quando la fioritura è al massimo della sua crescita ed è ricoperto di foglioline verde chiaro che sfumano al grigio. Non è molto spinosa ma i rami, rametti e peduncoli sono ricoperti da una fitta trama di setole.
La più romantica delle numerose leggende su di essa dice che prende il nome da "Fair Rosamund", l amante di Enrico II.
</string>

    <string name="fioritura">PERIODO DI FIORITURA:</string>
    <string name="colore">COLORE</string>
    <string name="forma">FORMA</string>
    <string name="profumo">PROFUMO</string>
    <string name="area">AREA CLIMATICA</string>
    <string name="altezza">ALTEZZA</string>
    <string name="diametro">DIAMETRO</string>
    <string name="malattie">MALATTIE</string>

    <string name="fioritura1">Unica e Tardiva</string>
    <string name="colore1">Rosa pastello</string>
    <string name="forma1">Globulosa, i fiori si aprono a coppa profonda </string>
    <string name="profumo1">Inebriante e dolce </string>
    <string name="area1">Tutte</string>
    <string name="altezza1">120</string>
    <string name="diametro1">10</string>
    <string name="malattie1">Funghi e parassiti</string>


    <string name="fioritura2">da maggio a settembre</string>
    <string name="colore2">Giallo vivace</string>
    <string name="forma2">Fiori grandi composti dal calice composto da 5 sepali e dalla corolla con 5 petali e stami
 </string>
    <string name="profumo2">thè</string>
    <string name="area2"> Riesce a resistere sia ad alte che a basse temperature </string>
    <string name="altezza2">200</string>
    <string name="diametro2">9</string>
    <string name="malattie2">Funghi e parassiti</string>

    <string name="info">Per maggiori informazioni</string>
    <string name="call">Chiamaci</string>

    <string name="fioritura3">giugno-ottobre</string>
    <string name="colore3">rossoscarlatto vellutato</string>
    <string name="forma3">fiore doppio con 15/30 petali</string>
    <string name="profumo3">intenso</string>
    <string name="area3">sopravvive tra i -10 e i 37 gradi, nel nord e negli Appennini</string>
    <string name="altezza3">100</string>
    <string name="diametro3">12</string>
    <string name="malattie3">acari e afidi</string>

    <string name="fioritura4">Estiva Univa</string>
    <string name="colore4">Variegato</string>
    <string name="forma4">Semidoppia con 22/34 petali </string>
    <string name="profumo4">ottimo</string>
    <string name="area4">4/8 zone freddissime</string>
    <string name="altezza4">90</string>
    <string name="diametro4">90</string>
    <string name="malattie4">oidio</string>

    <string name="credit">Creata da: Angeli Luca, Gamberini Giulia, Raimondi Ilaria, Tarozzi Alessia</string>
    <string name="where">Ingegneria Elettronica e Telecomunicazioni - Università degli studi di Bologna - Laboratorio di Software per le telecomunicaioni</string>
</resources>

