<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:stretchColumns="1">

    <TextView
    android:id="@+id/titolo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/rosa1"
    android:textStyle="bold"
    android:textSize="30sp"
    android:gravity="center_horizontal"
    android:layout_marginTop="15dp"
    android:textColor="@color/lightcoral"/>
<TableRow>
    <TextView
        android:text="@string/fioritura"
        android:padding="3dip" />
    <TextView
        android:text="@string/fioritura1"
        android:gravity="center_horizontal"
        android:padding="3dip"/>
</TableRow>
<TableRow>
    <TextView
        android:text="@string/colore"
        android:padding="3dip" />
    <TextView
        android:text="@string/colore1"
        android:gravity="center_horizontal"
        android:padding="3dip"/>
</TableRow>
<TableRow>
    <TextView
        android:text="@string/forma"
        android:padding="3dip" />

    <TextView
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:padding="3dip"
        android:text="@string/forma1" />
</TableRow>
<TableRow>
    <TextView
        android:text="@string/profumo"
        android:padding="3dip" />
    <TextView
        android:text="@string/profumo1"
        android:gravity="center_horizontal"
        android:padding="3dip"/>
</TableRow>
<TableRow>
    <TextView
        android:text="@string/area"
        android:padding="3dip" />
    <TextView
        android:text="@string/area1"
        android:gravity="center_horizontal"
        android:padding="3dip"/>
</TableRow>
    <TableRow>

    <TextView
        android:text="@string/altezza"
        android:padding="3dip" />
        <TextView
            android:text="@string/altezza1"
            android:gravity="center_horizontal"
            android:padding="3dip"/>
    </TableRow>

    <TableRow>
    <TextView
        android:text="@string/diametro"
        android:padding="3dip" />
        <TextView
            android:text="@string/diametro1"
            android:gravity="center_horizontal"
            android:padding="3dip"/>
    </TableRow>
    <TableRow>
    <TextView
        android:text="@string/malattie"
        android:padding="3dip" />
        <TextView
            android:text="@string/malattie1"
            android:gravity="center_horizontal"
            android:padding="3dip"/>

</TableRow>

    <ImageView
        android:id="@+id/Rosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rosacentifolia"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>
</TableLayout>