<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="@color/red">

    <TextView
        android:id="@+id/titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rosa3"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@color/lred"/>
    <TableRow android:background="@color/lred">
        <TextView
            android:text="@string/fioritura"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/fioritura3"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/colore"
            android:padding="3dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
        <TextView
            android:text="@string/colore3"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
    </TableRow>
    <TableRow android:background="@color/lred">
        <TextView
            android:text="@string/forma"
            android:padding="3dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>

        <TextView

            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:text="@string/forma3" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/profumo"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
        <TextView
            android:text="@string/profumo3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
    </TableRow>
    <TableRow android:background="@color/lred">
        <TextView
            android:text="@string/area"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
        <TextView
            android:text="@string/area3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
    </TableRow>
    <TableRow>

        <TextView
            android:text="@string/altezza"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
        <TextView
            android:text="@string/altezza3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
    </TableRow>

    <TableRow android:background="@color/lred">
        <TextView
            android:text="@string/diametro"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
        <TextView
            android:text="@string/diametro3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/malattie"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>
        <TextView
            android:text="@string/malattie3"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"/>

    </TableRow>

    <ImageView
        android:id="@+id/Rosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rosalincoln"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>
</TableLayout>