<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rosa2"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@color/gold"/>
    <TableRow android:background="@color/gold">
        <TextView
            android:text="@string/fioritura"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:text="@string/fioritura2"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/colore"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/colore2"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow android:background="@color/gold">
        <TextView
            android:text="@string/forma"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/forma2" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/profumo"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/profumo2"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow android:background="@color/gold">
        <TextView
            android:text="@string/area"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/area2"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>

        <TextView
            android:text="@string/altezza"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/altezza2"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </TableRow>

    <TableRow android:background="@color/gold">
        <TextView
            android:text="@string/diametro"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/diametro2"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/malattie"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/malattie2"
            android:gravity="center_horizontal"
            android:padding="3dip"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </TableRow>

    <ImageView
        android:id="@+id/Rosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rosatea"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        />
</TableLayout>